--- a/home.html
+++ b/home.html
@@ -8,13 +8,13 @@
     <div class="row">
         <div class="col-xs-6 iconHomeText">
             <a onclick="pageHome.changePage('members.html')">
-                <img src="img/64/members.png" class="img-responsive">
+                <img src="img/in_app_icons/members.png" class="img-responsive">
                 Members
             </a>
         </div>
         <div class="col-xs-6 iconHomeText">
             <a onclick="pageHome.changePage('directors.html')">
-                <img src="img/64/directors.png" class="img-responsive">
+                <img src="img/in_app_icons/directors.png" class="img-responsive">
                 Directors
             </a>
         </div>
@@ -23,13 +23,13 @@
     <div class="row">
         <div class="col-xs-6 iconHomeText">
             <a onclick="pageHome.changePage('events.html')">
-                <img src="img/64/events.png" class="img-responsive">
+                <img src="img/in_app_icons/events.png" class="img-responsive">
                 Events
             </a>
         </div>
         <div class="col-xs-6 iconHomeText">
             <a>
-                <img src="img/64/album.png" class="img-responsive">
+                <img src="img/in_app_icons/albums.png" class="img-responsive">
                 Albums
             </a>
         </div>
@@ -38,7 +38,7 @@
     <div class="row">
         <div class="col-xs-12 iconHomeText">
             <a onclick="pageHome.changePage('BnA.html')">
-                <img src="img/64/bday.png" class="img-responsive">
+                <img src="img/in_app_icons/bna.png" class="img-responsive">
                 Birthdays & Anniversaries
             </a>
         </div>
