--- a/login.html
+++ b/login.html
@@ -1,8 +1,8 @@
 <header>
     <div class="indexPageHeader navbar-default">
         <div align="center">
-            <img src="img/logo.png" class="img-responsive" id="appLogo">
-            <h2 id="indexHeaderText">E.G.A.</h2>
+            <img src="icon.png" class="img-responsive" id="appLogo">
+            <h2 id="indexHeaderText">Darpan</h2>
         </div>
     </div>
 </header>
