updated rsvp form and popovers

--- a/events.html
+++ b/events.html
@@ -21,46 +21,34 @@
                 <form role="form" id="rsvp_form">
                     <div class="form-group">
                         <label for="yesYouAttend">Are you attending?</label>
-                        <div class="radio">
-                            <label style="float: left;">
-                                <input type="radio" name="is_male" id="yesYouAttend" value="1" required>
-                                Yes
+                        <div>
+                            <label class="radio-inline">
+                                <input type="radio" name="is_male" id="yesYouAttend" value="1" required />Yes
                             </label>
-                        </div>
-                        <div class="radio">
-                            <label style="float: left;">
-                                <input type="radio" name="is_male" id="noYouAttend" value="0">
-                                No
+                            <label class="radio-inline">
+                                <input type="radio" name="is_male" id="noYouAttend" value="0" />No
                             </label>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="yesSpouseAttend">Is your spouse attending?</label>
-                        <div class="radio">
-                            <label style="float: left;">
-                                <input type="radio" name="is_female" id="yesSpouseAttend" value="1" required>
-                                Yes
+                        <div>
+                            <label class="radio-inline">
+                                <input type="radio" name="is_female" id="yesSpouseAttend" value="1" required />Yes
                             </label>
-                        </div>
-                        <div class="radio">
-                            <label style="float: left;">
-                                <input type="radio" name="is_female" id="noSpouseAttend" value="0">
-                                No
+                            <label class="radio-inline">
+                                <input type="radio" name="is_female" id="noSpouseAttend" value="0" />No
                             </label>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="yesKidsAttend">Are your children attending?</label>
-                        <div class="radio">
-                            <label style="float: left;">
-                                <input type="radio" name="are_kids" id="yesKidsAttend" value="1" required>
-                                Yes
+                        <div>
+                            <label class="radio-inline">
+                                <input type="radio" name="are_kids" id="yesKidsAttend" value="1" required />Yes
                             </label>
-                        </div>
-                        <div class="radio">
-                            <label style="float: left;">
-                                <input type="radio" name="are_kids" id="noKidsAttend" value="0">
-                                No
+                            <label class="radio-inline">
+                                <input type="radio" name="are_kids" id="noKidsAttend" value="0" />No
                             </label>
                         </div>
                     </div>
