--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="searchLabel">Search</h4>
+                <h4 class="modal-title" id="searchLabel" align="center">Search</h4>
             </div>
             <div class="modal-body">
                 <form role="form" id="searchForm" name="searchNameForm">
