added images from server. removed fade animation.

--- a/events.html
+++ b/events.html
@@ -10,7 +10,7 @@
 <br/>
 <div class="container homeContent" align="center">
 </div>
-<div class="modal fade" id="rsvpModal" tabindex="-1" role="dialog" aria-labelledby="rsvpLabel" aria-hidden="true">
+<div class="modal" id="rsvpModal" tabindex="-1" role="dialog" aria-labelledby="rsvpLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
