--- a/search_results.html
+++ b/search_results.html
@@ -11,7 +11,7 @@
 <div class="container homeContent" align="center">
 </div>
 <!-- Kids Modal -->
-<div class="modal fade" id="kidsModal" tabindex="-1" role="dialog" aria-labelledby="kidsLabel" aria-hidden="true">
+<div class="modal" id="kidsModal" tabindex="-1" role="dialog" aria-labelledby="kidsLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
