--- a/spouseInfo.html
+++ b/spouseInfo.html
@@ -15,7 +15,7 @@
 <div id="kidsOnParent">
 </div>
 <!-- Kids Modal -->
-<div class="modal fade" id="kidsModal" tabindex="-1" role="dialog" aria-labelledby="kidsLabel" aria-hidden="true">
+<div class="modal" id="kidsModal" tabindex="-1" role="dialog" aria-labelledby="kidsLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
