updated css. added getImageAssets function.

--- a/search_results.html
+++ b/search_results.html
@@ -1,9 +1,9 @@
 <header>
     <div class="page-header navbar-default navbar-fixed-top" align="center">
-        <button class="navbar-toggle btn-lg backBtn" type="button" id="myMenuBtn" onclick="app.onBackKeyDown();">
+        <button class="navbar-toggle btn-lg backBtn" type="button" id="bckWithoutSearch" onclick="app.onBackKeyDown();">
             <span class="glyphicon glyphicon-circle-arrow-left"></span>
         </button>
-        <h2 class="noPushyHeadSearchText">Results</h2>
+        <h2 class="noSearchHeaderText">Results</h2>
     </div>
 </header>
 <br/>
