--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     </div>
 </header>
 <br/>
-<div class="container homeContent" align="center">
+<div class="container homeData" align="center">
     <div class="row">
         <div class="col-xs-6 iconHomeText">
             <a onclick="pageHome.changePage('members.html')">
