updated notification message. event alert.

--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
                 Events
             </a>
         </div>
-        <div class="col-xs-6 iconHomeText">
+        <div class="col-xs-6 iconHomeText disabled-icon">
             <a>
                 <img src="img/in_app_icons/albums.png" class="img-responsive">
                 Albums
