--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <header>
     <div class="indexPageHeader navbar-default">
         <div align="center">
-            <img src="icon.png" class="img-responsive" id="appLogo">
+            <img src="img/icon.png" class="img-responsive" id="appLogo">
             <h2 id="indexHeaderText">Darpan</h2>
         </div>
     </div>
