--- a/home.html
+++ b/home.html
@@ -30,8 +30,8 @@
                 Events
             </a>
         </div>
-        <div class="col-xs-6 iconHomeText disabled-icon">
-            <a>
+        <div class="col-xs-6 iconHomeText">
+            <a onclick="pageHome.launchAlbumsPage()">
                 <img src="img/in_app_icons/albums.png" class="img-responsive">
                 Albums
             </a>
@@ -46,6 +46,13 @@
             </a>
         </div>
     </div>
+</div>
+<div class="navbar-fixed-bottom" align="center">
+    <a onclick="pageHome.launchAdPage()">
+        <div class="container">
+            <img src="img/homePageStrip.jpg" class="img-responsive">
+        </div>
+    </a>
 </div>
 <!-- Search Modal -->
 <div class="modal" id="searchModal" tabindex="-1" role="dialog" aria-labelledby="searchLabel" aria-hidden="true">
