dynamic footer ad. rsvp fix. UI fixes.

--- a/home.html
+++ b/home.html
@@ -49,8 +49,7 @@
 </div>
 <div class="navbar-fixed-bottom" align="center">
     <a onclick="pageHome.launchAdPage()">
-        <div class="container">
-            <img src="img/homePageStrip.jpg" class="img-responsive">
+        <div class="container" id="footerAdBlock">
         </div>
     </a>
 </div>
